chore: 调整编辑器样式解决点选被挡住问题

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -135,6 +135,10 @@
   flex-direction: column;
   z-index: 0;
 
+  overflow: hidden;
+  transform: scale(1); // 此后内部元素的fixed会相对此dom定位
+  transform-origin: center top;
+
   .ant-back-top {
     bottom: 96px;
     right: 39px;
@@ -155,10 +159,8 @@
 .ae-Preview {
   position: relative;
   flex-grow: 1;
+  min-height: 0;
   background-color: $default-bg-color;
-  overflow: hidden;
-  transform: scale(1); // 此后内部元素的fixed会相对此dom定位
-  transform-origin: center top;
 
   .ae-Preview-body {
     position: relative;
@@ -175,7 +177,7 @@
     &:before {
       content: '';
       display: block;
-      height: 24px;
+      height: 16px;
     }
 
     @include minScrollBar();
@@ -256,15 +258,15 @@
 
     &.is-mobile {
       position: relative;
-      border-width: 24px 22px 36px;
-      border-color: #ddd;
+      border-width: 10px;
+      border-color: #222;
       border-style: solid;
-      border-radius: 40px;
-      width: 419px;
-      height: 798px;
+      border-radius: 30px;
+      width: 375px;
+      height: 96%;
+      max-height: 812px;
       flex-grow: unset;
       min-height: unset;
-      margin: 40px auto;
       min-width: unset;
       padding: 0;
       overflow: visible;
@@ -275,6 +277,14 @@
       }
 
       > .ae-Preview-inner {
+        border-radius: 20px;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+
         background: transparent;
         overflow-x: hidden;
         overflow-y: auto;
@@ -288,71 +298,74 @@
           display: none;
         }
 
-        &::before {
-          content: '';
-          height: 40px;
-          position: sticky;
-          top: 0;
-          width: 100%;
-          background: #ddd;
-          flex-shrink: 0;
-          display: block;
-        }
+        // &::before {
+        //   content: '';
+        //   height: 40px;
+        //   position: sticky;
+        //   top: 0;
+        //   width: 100%;
+        //   background: #ddd;
+        //   flex-shrink: 0;
+        //   display: block;
+        // }
       }
 
-      // 移动端预览设备装饰
-      .mobile-sound,
-      .mobile-receiver,
-      .mobile-left-btn,
-      .mobile-right-btn,
-      .mobile-open-btn {
-        position: absolute;
-        background: #cdcdcd;
-        border-radius: 3px;
-        z-index: 100;
-      }
-      // 音响
-      .mobile-sound {
-        top: 5px;
-        left: 142px; // 164px - 22px;
-        width: 58px;
-        height: 6px;
-      }
-      // 听筒
-      .mobile-receiver {
-        top: 3px;
-        left: 224px; // 246px - 22px;
-        width: 10px;
-        height: 10px;
-        border-radius: 5px;
-      }
-      // 左侧按钮
-      .mobile-left-btn {
-        top: 162px; // 226px - 64px;
-        left: -27px; // -5px - 22px;
-        width: 6px;
-        height: 50px;
-      }
-      // 右侧按钮（长条）
-      .mobile-right-btn {
-        top: 61px; // 125px - 64px;
-        right: -27px;
-        width: 6px;
-        height: 100px;
-      }
-      // 开机键
-      .mobile-open-btn {
-        top: 211px; // 275px - 64px;
-        right: -27px;
-        width: 6px;
-        height: 50px;
-      }
+      // // 移动端预览设备装饰
+      // .mobile-sound,
+      // .mobile-receiver,
+      // .mobile-left-btn,
+      // .mobile-right-btn,
+      // .mobile-open-btn {
+      //   position: absolute;
+      //   background: #cdcdcd;
+      //   border-radius: 3px;
+      //   z-index: 100;
+      // }
+      // // 音响
+      // .mobile-sound {
+      //   top: 5px;
+      //   left: 142px; // 164px - 22px;
+      //   width: 58px;
+      //   height: 6px;
+      // }
+      // // 听筒
+      // .mobile-receiver {
+      //   top: 3px;
+      //   left: 224px; // 246px - 22px;
+      //   width: 10px;
+      //   height: 10px;
+      //   border-radius: 5px;
+      // }
+      // // 左侧按钮
+      // .mobile-left-btn {
+      //   top: 162px; // 226px - 64px;
+      //   left: -27px; // -5px - 22px;
+      //   width: 6px;
+      //   height: 50px;
+      // }
+      // // 右侧按钮（长条）
+      // .mobile-right-btn {
+      //   top: 61px; // 125px - 64px;
+      //   right: -27px;
+      //   width: 6px;
+      //   height: 100px;
+      // }
+      // // 开机键
+      // .mobile-open-btn {
+      //   top: 211px; // 275px - 64px;
+      //   right: -27px;
+      //   width: 6px;
+      //   height: 50px;
+      // }
     }
   }
 
   // 移动端需要上下滚动，避免设备背景被遮挡
   &.is-mobile-body {
-    overflow-x: hidden;
+    overflow: visible !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &::-webkit-scrollbar {
       background-color: $default-bg-color;
