feat(editor): 编辑器支持配置mini toolbal模式,仅保留基础的菜单功能

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -80,6 +80,7 @@
   min-height: 450px;
   min-width: 980px;
   overflow: hidden;
+  user-select: none;
 
   // 覆盖amis默认top值，避免导致未垂直居中
   .ae-Editor-toolbar svg.icon {
