feat: 表单支持flex布局 (#10286)
* feat: form-row-dnd

* form-dnd

* feat: form-flex-layout

* feat: form-flex-layout

* feat: 处理移动端独占一行的组件

* feat: 处理移动端独占一行的组件

* feat: 处理移动端独占一行的组件

* feat: 处理移动端独占一行的组件

* feat: 编辑器头部右侧提供容器

* fix: 修复移动端插入报错问题

* style: 优化form flex模式下移动端组件样式

* style: 优化flex dnd指示器样式

* chore: LabelAlign支持inherit值

* feat:  editor addElem 支持 nocode-form

* colSize

* 初始时获取第一个region

* form row 改为可选

* form 去掉 dndMode

* feat: 状态插件支持选择自定义表达式、校验插件新增清空方法、增加两种校验类型 (#10239)

* feat:基础插件优化、增加校验类型

* fix:去除默认options

---------

Co-authored-by: hezhihang <hezhihang@baidu.com>

* style: 优化flex dnd指示器样式

* fix: 修复标题位置继承错误问题

* fix: 修复colSize不实时渲染问题

* style: 优化零代码表单样式

* feat: xxxOn 支持自定义条件

* feat: xxxOn 支持自定义条件

* feat: xxxOn 支持自定义条件

* fix: 未验证的动态方法调用

* feat: 组件支持配置选中不高亮

* style: 修复input-number单个单位的样式

* fix: 导出校验相关函数 (#10263)

Co-authored-by: hezhihang <hezhihang@baidu.com>

* style: 表单组件不限制最大宽度

* feat: 支持配置面板内其他组件更新校验项时校验信息自动刷新 (#10279)

* fix(editor): 修复删除节点后未正确赋值父级region问题

* fix(editor): 修复拖拽后组件高亮异常问题

* fix(editor): 修复表单组件样式

* fix(editor): 修改文案

* 修复内置校验可关闭的问题 (#10281)

* fix: 内置校验一定是不可关闭的

* feat(editor): 编辑器支持配置mini toolbal模式,仅保留基础的菜单功能

* bugfix

* feat(editor): 编辑器可配置是否支持弹框

* 删除低码编辑器的表单flex模式

* bugfix

* fix: 优化状态中条件设置的判断逻辑 (#10294)

* fix: 导出校验相关函数

* fix: 优化条件设置逻辑

---------

Co-authored-by: hezhihang <hezhihang@baidu.com>

---------

Co-authored-by: qinhaoyan <30946345+qinhaoyan@users.noreply.github.com>
Co-authored-by: yupeng12 <yupeng12@baidu.com>
Co-authored-by: Allen <yupeng.fe@qq.com>
Co-authored-by: hzh11012 <43038692+hzh11012@users.noreply.github.com>
Co-authored-by: hezhihang <hezhihang@baidu.com>
Co-authored-by: hsm-lv <80095014+hsm-lv@users.noreply.github.com>
Co-authored-by: yangwei9012 <yangwei9012@163.com>

--- a/packages/amis-editor-core/scss/_bcn.scss
+++ b/packages/amis-editor-core/scss/_bcn.scss
@@ -4,12 +4,13 @@
   background: #fff;
   box-sizing: border-box;
   border-bottom: 1px solid $editor-border-color;
+  z-index: 1000;
+  padding: 0 16px;
 
   .ae-Breadcrumb-content {
     left: 0;
     height: 100%;
     width: max-content;
-    padding: 0 16px;
 
     white-space: nowrap;
     height: 22px;
