fix: 编辑器移动端预览态弹窗不可见

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -394,8 +394,9 @@
 .ae-PreviewIFrame {
   pointer-events: all !important;
   border: 0 !important;
-  min-height: calc(100% - 46px);
+  min-height: 100%;
   width: 100%;
+  height: auto !important;
 }
 
 .ae-IFramePreview {
