--- a/packages/amis-ui/scss/components/_panel.scss
+++ b/packages/amis-ui/scss/components/_panel.scss
@@ -1,7 +1,7 @@
 .#{$ns}Panel {
   margin: var(--Panel-marginTop) var(--Panel-marginRight)
     var(--Panel-marginBottom) var(--Panel-marginLeft);
-  background: var(--Panel-bg);
+  background: var(--Panel-bg-color);
   border-color: var(--Panel-top-border-color) var(--Panel-right-border-color)
     var(--Panel-bottom-border-color) var(--Panel-left-border-color);
   border-style: var(--Panel-top-border-style) var(--Panel-right-border-style)
@@ -9,7 +9,7 @@
   border-width: var(--Panel-borderWidth);
   border-radius: var(--Panel-borderRadius);
   -webkit-box-shadow: var(--Panel-boxShadow);
-  box-shadow: var(--Panel-boxShadow);
+  box-shadow: var(--Panel-shadow);
 
   &-fixedBottom {
     position: sticky;
@@ -24,8 +24,8 @@
       var(--Panel-bottom-border-color) var(--Panel-left-border-color);
 
     > .#{$ns}Panel-heading {
-      background: var(--Panel-heading-bg);
-      color: var(--Panel-heading-color);
+      background: var(--Panel-heading-bg-color);
+      color: var(--Panel-heading-font-color);
 
       .badge {
         color: var(--Panel--default-badgeColor);
@@ -157,7 +157,7 @@
   &-title {
     margin: 0;
     font-size: var(--Panel-heading-fontSize);
-    color: var(--Panel-heading-color);
+    color: var(--Panel-heading-font-color);
     font-weight: var(--Panel-heading-fontWeight);
     line-height: var(--Panel-heading-lineHeight);
   }
