--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -57,7 +57,7 @@
   margin-bottom: var(--Form-mode-default-labelGap);
   position: relative;
   font-size: var(--Form-item-fontSize);
-  color: var(--Form-item-fontColor);
+  color: var(--Form-item-font-color);
 
   > span {
     position: relative;
