--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -1633,7 +1633,7 @@
   // 表单
   --Form-item-gap: var(--sizes-base-12);
   --Form-item-mobile-gap: var(--sizes-base-4);
-  --Form-item-font-color: var(--colors-neutral-text-4);
+  --Form-item-color: var(--colors-neutral-text-4);
   --Form-item-fontSize: var(--fonts-size-7);
   --Form-item-fontWeight: var(--fonts-weight-6);
   --Form-item-lineHeight: var(--fonts-lineHeight-1);
@@ -2481,7 +2481,7 @@
   --Panel-heading-paddingLeft: var(--sizes-size-7);
   --Panel-heading-paddingRight: var(--sizes-size-7);
   --Panel-heading-bg-color: var(--colors-neutral-fill-10);
-  --Panel-heading-font-color: var(--colors-neutral-text-3);
+  --Panel-heading-color: var(--colors-neutral-text-3);
   --Panel-heading-fontSize: var(--fonts-size-8);
   --Panel-heading-fontWeight: var(--fonts-weight-6);
   --Panel-heading-lineHeight: var(--fonts-lineHeight-2);
