--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -3326,7 +3326,7 @@
   --image-image-normal-title-marginTop: var(--sizes-size-0);
   --image-image-description-color: var(--colors-neutral-text-2);
   --image-image-description-fontSize: var(--fonts-size-8);
-  --image-image-description-marginTop: var(--fonts-size-0);
+  --image-image-description-marginTop: var(--sizes-size-0);
   --image-image-normal-icon: '<svg viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g  stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd"><g><rect  opacity="0" x="0.5" y="0.5" width="15" height="15"></rect><path d="M7.9999,3.0001 C11.9889,3.0001 14.9999,6.8731 14.9999,8.0001 C14.9999,8.8831 11.9889,13.0001 7.9999,13.0001 C3.9609,13.0001 0.9999,8.8831 0.9999,8.0001 C0.9999,6.8731 3.9609,3.0001 7.9999,3.0001 Z M7.9999,4.0001 C4.7329,4.0001 2.2179,7.0861 2.0089,7.9731 C2.2749,8.7711 4.7189,12.0001 7.9999,12.0001 C11.2099,12.0001 13.7339,8.7311 13.9929,7.9631 C13.8069,7.1261 11.2709,4.0001 7.9999,4.0001 Z M7.975,5.879 C9.08,5.879 9.975,6.775 9.975,7.879 C9.975,8.983 9.08,9.879 7.975,9.879 C6.871,9.879 5.975,8.983 5.975,7.879 C5.975,6.775 6.871,5.879 7.975,5.879 Z M7.975,6.879 C7.424,6.879 6.975,7.327 6.975,7.879 C6.975,8.43 7.424,8.879 7.975,8.879 C8.527,8.879 8.975,8.43 8.975,7.879 C8.975,7.327 8.527,6.879 7.975,6.879 Z" ></path></g></g></svg>';
 
   --image-images-item-marginTop: var(--sizes-size-3);
@@ -3642,7 +3642,6 @@
   --Pick-base-icon-color: #84878c;
   --Pick-base-value-hover-icon-color: #b3d7ff;
   --Pick-base-value-icon-color: var(--colors-other-5);
-  --Picker-iconColor: var(--Pick-base-icon-color);
   --Picker-onHover-iconColor: var(--icon-onHover-color);
   --Picker-tag-height: #{px2rem(24px)};
   --Picker-tag-marginBottom: var(--select-multiple-marginBottom);
@@ -3658,7 +3657,7 @@
   --Pick-status-hover-left-border-color: var(--colors-other-5);
   --Pick-status-hover-left-border-width: var(--borders-width-2);
   --Pick-status-hover-left-border-style: var(--borders-style-2);
-  --Pick-status-hover-bgColor: var(--colors-neutral-line-11);
+  --Pick-status-hover-bgColor: var(--colors-neutral-fill-11);
   --Pick-status-focus-top-border-color: var(--colors-other-7);
   --Pick-status-focus-top-border-width: var(--borders-width-2);
   --Pick-status-focus-top-border-style: var(--borders-style-2);
@@ -3672,7 +3671,7 @@
   --Pick-status-focus-left-border-width: var(--borders-width-2);
   --Pick-status-focus-left-border-style: var(--borders-style-2);
   --Pick-status-focus-shadow: var(--shadows-shadow-none);
-  --Pick-status-focus-bgColor: var(--colors-neutral-line-11);
+  --Pick-status-focus-bgColor: var(--colors-neutral-fill-11);
   --Pick-status-disabled-color: var(--colors-neutral-text-2);
   --Pick-status-disabled-fontSize: var(--fonts-size-7);
   --Pick-status-disabled-fontWeight: var(--fonts-weight-6);
@@ -3688,7 +3687,7 @@
   --Pick-status-disabled-left-border-color: var(--colors-neutral-line-8);
   --Pick-status-disabled-left-border-width: var(--borders-width-2);
   --Pick-status-disabled-left-border-style: var(--borders-style-2);
-  --Pick-status-disabled-bgColor: var(--colors-neutral-text-10);
+  --Pick-status-disabled-bgColor: var(--colors-neutral-fill-10);
   --Pick-status-disabled-color: var(--colors-neutral-line-6);
   --Pick-status-disabled-fontSize: var(--fonts-size-7);
   --Pick-status-disabled-fontWeight: var(--fonts-weight-6);
