优化编辑器表单布局配置

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -55,6 +55,7 @@
 @import './style-control/theme-css-code';
 @import './style-control/flex-layout';
 @import './style-control/col-count';
+@import './style-control/col-size';
 
 /* 组件样式 */
 @import './components/button';
