--- a/packages/amis-editor-core/scss/style-control/_col-size.scss
+++ b/packages/amis-editor-core/scss/style-control/_col-size.scss
@@ -1,14 +1,15 @@
-.ColCount {
+.ColSize {
   display: flex;
   background-color: #f7f7f9;
   padding: 2px;
   border-radius: 4px;
   &-item {
     text-align: center;
-    line-height: 30px;
+    line-height: 28px;
     flex: 1;
     min-width: 0;
-    height: 30px;
+    width: 32px;
+    height: 28px;
     cursor: pointer;
     &:not(.is-disabled):hover {
       background: #fff;
@@ -24,7 +25,4 @@
     cursor: not-allowed;
     color: #ccc;
   }
-}
-.LabelAlign {
-  width: 100%;
 }
