表单静态展示外观配置

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -4258,4 +4258,9 @@
 
   --common-popover-border: var(--borders-width-2) solid
     var(--colors-neutral-fill-9);
+
+  --Form-static-fontSize: var(--fonts-size-7);
+  --Form-static-color: var(--colors-neutral-text-2);
+  --Form-static-lineHeight: var(--fonts-lineHeight-2);
+  --Form-static-fontWeight: var(--fonts-weight-6);
 }
