--- a/packages/amis-ui/scss/components/form/_icon-select.scss
+++ b/packages/amis-ui/scss/components/form/_icon-select.scss
@@ -51,9 +51,10 @@
 
   &-input {
     overflow: hidden;
+    height: px2rem(32px);
 
     &-area {
-      min-height: var(--IconSelect-preivew-icon-size);
+      min-height: var(--IconSelect-preview-icon-size);
       display: flex;
       align-items: center;
       justify-content: flex-start;
@@ -82,13 +83,11 @@
 
     &-icon {
       &-show {
-        width: var(--IconSelect-preivew-icon-size);
-        height: var(--IconSelect-preivew-icon-size);
-        margin-right: var(--IconSelect-xs-margin);
-
         & > svg {
-          width: 100%;
-          height: 100%;
+          width: var(--IconSelect-preview-icon-size);
+          height: var(--IconSelect-preview-icon-size);
+          margin-right: var(--IconSelect-xs-margin);
+          top: px2rem(3px);
         }
       }
 
@@ -99,6 +98,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        font-size: 12px;
       }
 
       &-placeholder {
