style: 优化form flex模式下样式问题

--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -449,6 +449,9 @@
 
   .#{$ns}Form-flexInner--label-top {
     flex-direction: column;
+    > .#{$ns}Form-control {
+      flex-basis: auto;
+    }
   }
   .#{$ns}Form-flexInner--label-left {
     > .#{$ns}Form-label {
