--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -438,18 +438,25 @@
       vertical-align: top;
       padding-top: var(--Form-label-paddingTop);
       margin-right: var(--Form-row-gutterWidth);
+      .#{$ns}Remark {
+        vertical-align: initial;
+      }
     }
 
-    > .#{$ns}Form-control {
+    > .#{$ns}Form-value {
       flex-basis: 0;
       flex-grow: 1;
       min-width: 0;
+      .#{$ns}Remark {
+        vertical-align: initial;
+        margin-left: 0;
+      }
     }
   }
 
   .#{$ns}Form-flexInner--label-top {
     flex-direction: column;
-    > .#{$ns}Form-control {
+    > .#{$ns}Form-value {
       flex-basis: auto;
     }
   }
