crud 外观默认值

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -3949,6 +3949,7 @@
   --table-body-fontWeight: var(--fonts-weight-6);
   --table-body-lineHeight: var(--fonts-lineHeight-2);
   --table-body-bg-color: var(--colors-neutral-fill-11);
+  --table-body-default-bg-color: var(--table-body-bg-color);
   --table-body-hover-color: var(--colors-neutral-text-2);
   --table-body-hover-bg-color: var(--colors-brand-10);
   --table-body-hover-border-color: var(--colors-neutral-line-8);
