feat: input-table 的复制功能支持配置复制数据映射

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -253,6 +253,11 @@
       & .label {
         font-size: 90%;
       }
+
+      & > .#{$ns}Form,
+      & > .#{$ns}Form-item {
+        min-width: var(--Form-control-widthBase);
+      }
     }
 
     &.is-layout-fixed td {
