--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1608,8 +1608,10 @@ div.ae-DragImage {
     .col-edit {
       width: 30px;
       flex-grow: 0;
+      min-width: auto;
 
       > button {
+        cursor: pointer;
         border: 0;
         background-color: transparent;
         outline: none;
