fix: 修复table列文本高度不一致问题

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -258,6 +258,10 @@
       & > .#{$ns}Form-item {
         min-width: var(--Form-control-widthBase);
       }
+
+      .#{$ns}Form-static {
+        min-height: auto;
+      }
     }
 
     &.is-layout-fixed td {
