style: 调整 inputGroup 样式 Close: #10593

--- a/packages/amis-ui/scss/components/form/_input-group.scss
+++ b/packages/amis-ui/scss/components/form/_input-group.scss
@@ -22,10 +22,10 @@
     white-space: nowrap;
   }
 
-  & > .#{$ns}Form-control {
-    flex: 1;
-    min-width: 0;
-  }
+  // & > .#{$ns}Form-control {
+  //   flex: 1;
+  //   min-width: 0;
+  // }
 
   &-addOn {
     background: var(--InputGroup-addOn-bg);
