--- a/packages/amis-ui/scss/components/_list.scss
+++ b/packages/amis-ui/scss/components/_list.scss
@@ -1,5 +1,8 @@
 .#{$ns}List {
   position: relative;
+  // 黑科技，让 scrollIntoView 能够跑正确的位置
+  margin-top: calc(var(--affix-offset-top) * -1);
+  padding-top: var(--affix-offset-top);
 
   &-items {
     border-radius: var(--List-borderRadius);
