--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -1,6 +1,10 @@
 .#{$ns}Table {
   position: relative;
 
+  // 黑科技，让 scrollIntoView 能够跑正确的位置
+  margin-top: calc(var(--affix-offset-top) * -1);
+  padding-top: var(--affix-offset-top);
+
   border-radius: var(--Table-borderRadius);
   margin-bottom: var(--gap-md);
 
