--- a/packages/amis-ui/scss/components/_cards.scss
+++ b/packages/amis-ui/scss/components/_cards.scss
@@ -1,7 +1,8 @@
 .#{$ns}Cards {
   // 黑科技，让 scrollIntoView 能够跑正确的位置
-  margin-top: calc(var(--affix-offset-top) * -1);
-  padding-top: var(--affix-offset-top);
+  // margin-top: calc(var(--affix-offset-top) * -1);
+  // padding-top: var(--affix-offset-top);
+  scroll-margin-top: var(--affix-offset-top);
 
   &-toolbar {
     @include clearfix();
