feat: form、crud、textarea、selecth支持外观配置 (#10649)
* feat(editor): 表单支持外观配置

* bugfix

* 优化获取cssVar逻辑

* 优化外观默认值

* 删除外观继承相关逻辑

* 更新快照

* 表单布局

* 表单默认mode优化为flex

* 优化colorpicker交互

* 优化编辑器表单布局配置

* 表单静态展示外观配置

* bugfix

* feat: crud2支持外观配置

* crud 外观默认值

* bugfix

* 多行文本支持外观配置

* 下拉框支持外观配置

* 修复table表头无法居中对齐问题

* style: 优化表格样式

* bugfix

---------

Co-authored-by: qinhaoyan <30946345+qinhaoyan@users.noreply.github.com>

--- a/packages/amis-ui/scss/components/_table2.scss
+++ b/packages/amis-ui/scss/components/_table2.scss
@@ -193,6 +193,8 @@
 
     > thead > tr {
       > th {
+        height: var(--table-body-line-height);
+        vertical-align: middle;
         background: var(--Table-thead-bg);
         padding: var(--table-paddingTop) var(--table-paddingRight)
           var(--table-paddingBottom) var(--table-paddingLeft);
@@ -259,6 +261,8 @@
 
       > td,
       > th {
+        height: px2rem(40px);
+        vertical-align: middle;
         padding: var(--table-paddingTop) var(--table-paddingRight)
           var(--table-paddingBottom) var(--table-paddingLeft);
 
@@ -281,6 +285,16 @@
         .#{$ns}Table-expandBtn {
           margin-right: 5px;
         }
+      }
+
+      .#{$ns}Form-static {
+        padding: 0;
+        margin: 0;
+        min-height: inherit;
+        line-height: inherit;
+        font-size: inherit;
+        color: inherit;
+        font-weight: inherit;
       }
 
       .#{$ns}Table-cell-height-large {
