--- a/packages/amis-editor-core/scss/control/_event-action.scss
+++ b/packages/amis-editor-core/scss/control/_event-action.scss
@@ -382,7 +382,7 @@
       }
       .action-desc {
         margin-left: 16px;
-        color: var(--Form-item-fontColor);
+        color: var(--Form-item-color);
       }
 
       .cmpt-action-select,
