--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -54,6 +54,8 @@
 @import './style-control/style-common';
 @import './style-control/theme-css-code';
 @import './style-control/flex-layout';
+@import './style-control/col-count';
+@import './style-control/col-size';
 
 /* 组件样式 */
 @import './components/button';
