--- a/packages/amis-ui/scss/components/_panel.scss
+++ b/packages/amis-ui/scss/components/_panel.scss
@@ -1,7 +1,7 @@
 .#{$ns}Panel {
   margin: var(--Panel-marginTop) var(--Panel-marginRight)
     var(--Panel-marginBottom) var(--Panel-marginLeft);
-  background: var(--Panel-bg);
+  background: var(--Panel-bg-color);
   border-color: var(--Panel-top-border-color) var(--Panel-right-border-color)
     var(--Panel-bottom-border-color) var(--Panel-left-border-color);
   border-style: var(--Panel-top-border-style) var(--Panel-right-border-style)
@@ -9,7 +9,7 @@
   border-width: var(--Panel-borderWidth);
   border-radius: var(--Panel-borderRadius);
   -webkit-box-shadow: var(--Panel-boxShadow);
-  box-shadow: var(--Panel-boxShadow);
+  box-shadow: var(--Panel-shadow);
 
   &-fixedBottom {
     position: sticky;
@@ -24,7 +24,7 @@
       var(--Panel-bottom-border-color) var(--Panel-left-border-color);
 
     > .#{$ns}Panel-heading {
-      background: var(--Panel-heading-bg);
+      background: var(--Panel-heading-bg-color);
       color: var(--Panel-heading-color);
 
       .badge {
