fix: 修复外观的一些问题

--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -523,6 +523,10 @@
   }
 }
 
+.#{$ns}Form--column-1 > .#{$ns}Form-item {
+  width: 100%;
+}
+
 .#{$ns}Form--column-2 > .#{$ns}Form-item {
   width: 50%;
 }
