chore: 优化 combo tabs 模式新增成员直接打开对应 tab 减少操作步骤

--- a/packages/amis-ui/scss/components/form/_combo.scss
+++ b/packages/amis-ui/scss/components/form/_combo.scss
@@ -295,6 +295,12 @@
   }
 }
 
+.#{$ns}ComboTabs {
+  border-left: var(--Form-input-borderWidth) solid var(--borderColor);
+  border-right: var(--Form-input-borderWidth) solid var(--borderColor);
+  border-bottom: var(--Form-input-borderWidth) solid var(--borderColor);
+}
+
 .#{$ns}ComboTabs > .#{$ns}Tabs-links {
   @include clearfix();
   .#{$ns}Tabs-link {
