--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -261,7 +261,8 @@
       }
 
       & > .#{$ns}Form,
-      & > .#{$ns}Form-item {
+      & > .#{$ns}Form-item > .#{$ns}Form-control:not(.is-thin) {
+        // todo 优化这个，有些表单项宽度其实是很小的比如 switch，button，checkbox，radio
         min-width: var(--Form-control-widthBase);
       }
 
