--- a/packages/amis-ui/scss/components/form/_user-select.scss
+++ b/packages/amis-ui/scss/components/form/_user-select.scss
@@ -541,6 +541,7 @@
   &-popup {
     width: 100vw;
     height: 100vh;
+    border: none;
 
     .#{$ns}PopUp-content {
       overflow-x: hidden;
@@ -609,6 +610,7 @@
     }
 
     .#{$ns}Tabs-content {
+      border: none;
       background-color: var(--UserSelect--content-bg);
     }
 
@@ -619,7 +621,7 @@
 
       &:last-child {
         min-width: 0;
-    min-height: 0;
+        min-height: 0;
         flex: 1;
 
         > div {
