优化参数名

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -2016,7 +2016,7 @@ div[class*='Form-group']:empty {
     align-items: center;
     position: relative;
     height: 20px;
-    &-size {
+    &-scale {
       margin-right: 10px;
       display: flex;
       position: relative;
