--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1952,7 +1952,6 @@ div[class*='Form-group']:empty {
   justify-content: space-between;
   background: #fff;
   align-items: center;
-  border-bottom: 1px solid $editor-border-color;
   .ae-Breadcrumb {
     flex: 1;
     max-width: 100%;
@@ -1961,5 +1960,17 @@ div[class*='Form-group']:empty {
   &-Right-Container {
     z-index: 1001;
     background-color: #fff;
+  }
+}
+
+.ae-Editor-inner--mobile {
+  .ae-Main {
+    position: relative;
+    .ae-Preview {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      top: 53%;
+      left: 50%;
+    }
   }
 }
