docs: 将文档左侧导航栏下边距设置成和右侧文档主体下边距一致，以避免底部菜单被浏览器链接遮挡

--- a/examples/style.scss
+++ b/examples/style.scss
@@ -850,7 +850,7 @@ body {
       position: fixed;
       width: 200px;
       top: 100px;
-      bottom: 0;
+      bottom: 25px;
       overflow-y: auto;
       overflow-x: hidden;
       border-right: 1px solid #e8ebee;
