feat: 美化crud2移动端的卡片样式,支持查询表单折叠

--- a/packages/amis-ui/scss/_properties.scss
+++ b/packages/amis-ui/scss/_properties.scss
@@ -878,4 +878,8 @@ $Table-strip-bg: transparent;
   :root {
     --fontSizeBase: var(--fontSizeLg);
   }
+  :root,
+  .AMISCSSWrapper {
+    --Page-body-padding: var(--gap-md);
+  }
 }
