--- a/packages/amis-ui/scss/_properties.scss
+++ b/packages/amis-ui/scss/_properties.scss
@@ -853,4 +853,8 @@ $Table-strip-bg: transparent;
   :root {
     --fontSizeBase: var(--fontSizeLg);
   }
+  :root,
+  .AMISCSSWrapper {
+    --Page-body-padding: var(--gap-md);
+  }
 }
