feat: 修正crud2移动端简单查询折叠器箭头方向,没数据时不显示[没有更多了]文案

--- a/packages/amis-ui/scss/components/_crud2.scss
+++ b/packages/amis-ui/scss/components/_crud2.scss
@@ -145,6 +145,10 @@
       width: 100%;
     }
 
+    .#{$ns}Cards-placeholder {
+      font-size: var(--fonts-size-7);
+    }
+
     .#{$ns}Card {
       --Card-borderRadius: var(--sizes-size-5);
       --gap-base: var(--sizes-size-9);
