feat: 折叠面板，无标题时显示折叠箭头。组件存在于表单中，面板新增切换展示方式按钮

--- a/packages/amis-ui/scss/components/_collapse.scss
+++ b/packages/amis-ui/scss/components/_collapse.scss
@@ -69,6 +69,10 @@
     align-items: center;
     margin-right: var(--collapse-icon-margin);
 
+    &.noTitle {
+      transform: translateY(-50%);
+    }
+
     svg {
       width: var(--collapse-icon-size);
       height: var(--collapse-icon-size);
